--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body{
     justify-content: center;
     height: 100vh;
     margin: 0;
+    background-color: antiquewhite;
 }
 #calculator {
     min-width: 25%;
