--- a/styles.css
+++ b/styles.css
@@ -1,57 +1,134 @@
-body{
+body {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     margin: 0;
     background-color: antiquewhite;
-}
-#calculator {
-    min-width: 25%;
+  }
+  
+  #calculator {
+    max-width: 300px;
     height: 60%;
-    border: 4px solid black;
-    border-radius: 3%;
+    border: 2px solid #ccc;
+    border-radius: 10px;
     padding: 20px;
     background-color: rgb(156, 172, 185);
     display: flex;
     flex-direction: column;
     gap: 0.5em;
-    
-}
-
-#display {
-    height: 30px;
-    border: 2px solid black;
-    flex: 2; 
-    height: auto; 
-    font-size: 56px;
-    background-color: whitesmoke;
-    margin-bottom: 0.2em;
-    
-}
-p{margin:0;
-text-align: end;
-height: 50%;}
-#operation{font-size: smaller;}
-
-
-#clear{
-    background-color: rgb(90, 216, 216);
-}
-#delete{
-    background-color: pink;
-}
-
-.row {
-    flex: 1; 
+    margin: 0 auto;
+  }
+  
+  #display {
     display: flex;
-    gap: 0.5em;
-}
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    height: 100px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 36px; 
+    background-color: #f5f5f5;
+    margin-bottom: 10px;
+    padding: 10px;
+    overflow: hidden; 
+  }
+  
+  
+  
+  p {
+    margin: 0;
+    text-align: end;
+    width:100%;
+    height: 100%;
+  }
+  
+  #operation {
+    font-size: smaller;
+  }
+  
+  .row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px; 
+  }
+  
+  .row button {
+    width: 70px;
+    height: 50px;
+    font-size: 18px;
+    background-color: #f0f0f0;
+    border: 1px solid #2c1616;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 5px;
+    margin-right: 5px; 
+  }
+  
+  .row button:last-child {
+    margin-right: 0; 
+  }
+  button:hover {
+    background-color: #e0e0e0;
+  }
+  
+  #clear,
+  #delete {
+    width: calc(70px * 1.8 + 10px); 
+  }
+  #clear {
+    background-color: rgba(255, 85, 0, 0.843); 
+    color: white; 
+  }
+  
+  #delete {
+    background-color: rgb(58, 127, 58); 
+    color: white;
+  }
 
-button {
-    flex: 1; 
-    margin: 0; 
-    border: 2px solid black;
-    border-radius: 6%;
-    font-size: large;
-}
+  footer {
+    position: fixed; 
+    bottom: 0; 
+    width: 100%; 
+    padding: 10px; 
+    text-align: center; 
+    font-size: 14px; 
+    color: grey; 
+  }
+  
+  #attribution, #copyright {
+    text-align: center; 
+    margin-top: 20px;
+    font-size: 14px; 
+    color: grey;
+    bottom: 0; 
+    width: 100%;
+  }
+  
+  #attribution a {
+    text-decoration: none;
+    color: grey;
+  }
+  
+  
+  #copyright img {
+    width: 24px; 
+    transition: transform 0.3s; 
+  }
+  
+  #copyright img:hover {
+    transform: scale(1.2) rotate(360deg); 
+  }
+
+  #copyright {
+    font-size: 20px;
+  }
+  
+  /* Set link styles */
+  #copyright a {
+    color: grey;
+    text-decoration: none;
+    font-size: 20px;
+  }
+  
